<resources>
    <string name="app_name">AppMovil</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="btnEntrar">Entrar</string>
    <string name="mensajeRegistrar"><u>Aun no estas registrado</u></string>
    <string name="regustrarse">Registrarse</string>
    <string name="yaRegistrado">¿Ya estas registrado?</string>
    <string name="confContraseña">Confirmar contraseña</string>
    <string name="NombreUsuario">Nombre</string>
    <string name="tituloError">Se ha devuelto el siguiente error</string>
    <string name="errorConfContraseña">El valor de contraseña y confirmar contraseña no coinciden</string>
    <string name="errorCamposVacios">Rellene todos los campos para registrarse</string>
    <string name="btnCerrarSesion">Cerrar sesión</string>
    <string name="btnEditarUsuario">Editar usuario</string>
    <string name="btnCrearPost">Crear nuevo post</string>
    <string name="btnComentar">Comentar post</string>
    <string name="Comentarios">Comentarios:</string>
    <string name="Amigos">Amigos</string>
    <string name="Usuario">Usuario</string>
    <string name="Busacar">Buscar</string>
    <string name="TusAmigos">Tus amigos</string>
    <string name="peticiones">Peticiones pendientes</string>
    <string name="textPeticion1">El usuario </string>
    <string name="textPeticion2"> quiere ser tu amigo</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechaczar">Rechazar</string>
    <string name="noAmigos">Aún no tienes amigos</string>
    <string name="solicitarAmistad">Enviar solicitud de amistas</string>
    <string name="esperandoAmistad">Esperando respuestas a la solicitud</string>
    <string name="usuarioPropietario">Información propietario</string>
    <string name="yaAmigos">Ya eres amigo del usuario</string>
    <string name="CambiarDatostxt">Solo rellene los campos que quiere modificar y la contraseña actual para modificar su perfil</string>
    <string name="nuevoNombre">Nuevo nombre</string>
    <string name="nuevoEmail">Nuevo email</string>
    <string name="nuevoPass">Nueva contraseña</string>
    <string name="nuevoConfirma">Confirmar nueva contraseña</string>
    <string name="ContraseñaActual">Contraseña actual</string>
    <string name="cancelar">Cancelar</string>
    <string name="actualizar">Confirmar</string>
    <string name="publicar">Publicar</string>
    <string name="publicarPost">Publicar post</string>
    <string name="publicarComentario">Publicar comentario</string>
    <string name="publico">Público</string>
    <string name="privado">Privado</string>
    <string name="tipo">Que tipo de post quieres crear</string>
</resources>
