<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textRegistrar"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="#8D1170D6"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/regustrarse"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/imRegNombre"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/NombreUsuario"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/imRegEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/imRegContraseña"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/imRegConfContraseña"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confContraseña"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:id="@+id/butRegister"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/regustrarse" />

    <TextView
        android:id="@+id/textYaRegistrado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:gravity="center"
        android:text="@string/yaRegistrado"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />
</LinearLayout>