<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.7"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textPublicar"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                android:background="#8D1170D6"
                android:gravity="center|center_horizontal|center_vertical"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/PrivOPublico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tipoPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tipo"
                    android:textSize="18sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_publico"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:checked="true"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/publico" />

                    <RadioButton
                        android:id="@+id/radio_privado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/privado" />
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/textArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@null"
                android:gravity="top|left"
                android:hint="Introduce aqui el contenido"
                android:inputType="textMultiLine"
                android:lines="6"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/PUbtnCancelar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:backgroundTint="@color/rojo"
                    android:text="@string/cancelar" />

                <Button
                    android:id="@+id/PUbtnPublicar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:backgroundTint="@color/verde"
                    android:text="@string/publicar" />

            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/PUbottonNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:itemBackground="@color/elemento"
            app:itemIconTint="@color/bottom_nav_no_color"
            app:itemTextColor="@color/bottom_nav_no_color"
            app:menu="@menu/main_menu"></com.google.android.material.bottomnavigation.BottomNavigationView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>