<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".PrincipalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:background="@color/infoColor"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prinInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/infoColor"
                android:gravity="center"
                android:text="Tu usuario"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/prInfoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/infoColor"
                android:gravity="center"
                android:text="TextView"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/prInfoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@color/infoColor"
                android:gravity="center"
                android:text="TextView"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:visibility="visible">

                <Button
                    android:id="@+id/buttonCerrarSesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/rojo"
                    android:text="@string/btnCerrarSesion" />

                <Button
                    android:id="@+id/buttonEditarUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/link"
                    android:text="@string/btnEditarUsuario" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonCrearPot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/verde"
                android:text="@string/btnCrearPost" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/posts_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4">
        </androidx.recyclerview.widget.RecyclerView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/PbottonNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:itemBackground="@color/elemento"
            app:itemIconTint="@color/bottom_nav_color"
            app:itemTextColor="@color/bottom_nav_color"
            app:menu="@menu/main_menu"></com.google.android.material.bottomnavigation.BottomNavigationView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>